--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -47,9 +47,7 @@ In the 1980s, research at CERN in Switzerland by British computer scientist Tim 
 	<div id="footer-wrapper">
 		<footer id="footer">
 		<p>
-		This page was last modified on 3 November 2016, at 15:44.<br><br>
-Text is available under the Creative Commons Attribution-ShareAlike License; additional terms may apply. By using this site, you agree to the Terms of Use and Privacy Policy. Wikipedia® is a registered trademark of the Wikimedia Foundation, Inc., a non-profit organization.
-		</p>
+		This is our footer 	This is our footer 		This is our footer 		This is our footer 		This is our footer 		This is our footer 		This is our footer 		This is our footer 		This is our footer 		This is our footer 		This is our footer 		This is our footer 			</p>
 		</footer>
 	</div>
 
