--- a/Project 1/index.html
+++ b/Project 1/index.html
@@ -47,7 +47,7 @@ In the 1980s, research at CERN in Switzerland by British computer scientist Tim 
 	<div id="footer-wrapper">
 		<footer id="footer">
 		<p>
-		This is our footer 	This is our footer 		This is our footer 		This is our footer 		This is our footer 		This is our footer 		This is our footer 		This is our footer 		This is our footer 		This is our footer 		This is our footer 		This is our footer 			</p>
+		This is our footer 	TESTThis is our footer 		This is our footer 		This is our footer 		This is our footer 		This is our footer 		This is our footer 		This is our footer 		This is our footer 		This is our footer 		This is our footer 		This is our footer 			</p>
 		</footer>
 	</div>
 
